# course_clearing

./: .dockerignore  .env.demo.example  .gitignore  Cargo.toml  Makefile  README.md  RUNBOOK.md  RUNBOOK_DEMO.md  docker-compose.override.yml  docker-compose.yml  setup-hosts.sh  setup-ssl.sh  switch-to-http.sh  switch-to-https.sh
api/: .dockerignore  0001_init_tables.sql  0003_add_withdrawals_table.sql  0004_add_nonce_to_withdrawals.sql  Cargo.toml  Dockerfile  main.d
api/.sqlx/: query-098bf5ab4d7506d4a4ac769df8943dcc937321a5464e6c21b9f4bb945e883061.json  query-1328c3ea7f7ba2dbcdc42be3f67cdd938846c9f2f1ab46ea741277ab6d2a1130.json  query-15431694e1609741becbfcd6bf40d2f939ed5a7cbd11adb6fc1b17dac7f7d934.json  query-17150a9ea3dd276e420120043ff3f5f4d50c10f68693c6cb2d968e037f6822cc.json  query-1a96739107938e67c4ca51cdc9db9e2ea637555707265c5c1d36f5e271d0c568.json  query-1bd5537e330485688e0a808e3cae8e66a66d31facb8d3f9f3893d34abd1d9605.json  query-21123c0e1110d8c31e7df14647708308eea5be87b6b233993f4034d1d832cb11.json  query-2278ba55ae36ab632d0b155a520f749b9e95f6f4d8ffb4fa847429cf9bad91d7.json  query-22cc54d026ac151fe07298281ea024eea312f93c33defcdf02699914c4baa614.json  query-272b9b46ac0ad22ef437161cca26b9e047468fbb8d114a1f96169c18bc23064d.json  query-2a218727c2bda6c30600b9cd66d301fe433eb47623664f2f9e3ed523e50f4862.json  query-2b403c50c5a473295faf2439c664c8a5ab8c6523721ce27702ab3794e2bfe55e.json  query-2ed464c1bdf6168ae22504661df22f88785697abcab69778dec7eda9129b8a37.json  query-3c4eee9660f305cd7b5b0b53d200c60f88a3af1a29aa9572ed7bc16830a3faa6.json  query-58f793d7b97806d2a9121867278f0ba579a549469375d5e8c76cfe89ce6ac233.json  query-652dab36b6944f58a43882015c890d1d061a915cdf1cad695cfaac470a9a1282.json  query-77f5ff0c8514a07a3d85500a4d97c759c6917e3fd253833e0ea2e262a590630e.json  query-7d780eb770c02aabeef5221eb5c65f516bca7218598e80c8ec85c35393bd8e6b.json  query-8554a22a24a8af2ea83ff19e41d4e1ceb74748d13c30b6269631e83c0662f052.json  query-8a2f0559a4c810a5b49b593d41b82214dfb68692b130bddcb3a0aa621fa4e061.json  query-9825046feaf567eea9d5a2067bbbca142484e06261c49eb2417b724c5d4fc927.json  query-9af62869e8276e8db3194af16533bcd0887b7a3e917d67a45c6a70e7f7933a11.json  query-9fe057e5cd88fb25783748f470ccef14d8216a7fef6672f6484b57816de04abc.json  query-a6507e620985ca75b2fed1d08a583845c362b78f880fe4dddf7e667a4f4a0349.json  query-acd36d88b1557599364d8be4885a5c0bb8285c66c2824189e98d3abb4edfb17d.json  (+16 more)
api/src/: db.rs  (+11 more)
(+173 files in other folders)
