[package]
name = "clearing-api"
version = "0.1.0"
edition = "2021"

[dependencies]
clearing_solana = { path = "../clearing_solana/programs/clearing_solana/" }
actix-web = "4.4"
actix-cors = "0.6"
anchor-client = "0.32.1"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "migrate"] }
solana-client = "3.1"
solana-sdk = "3"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ed25519-dalek = "2.2.0"
base64 = "0.22.1"
solana-program = "3.0.0"
anchor-lang = { version = "0.32.1", features = ["derive"] }
tokio-stream = "0.1"
sha2 = "0.10"
