[package]
name = "clearing-service"
version = "0.1.0"
description = "Decentralized clearing service on Solana"
edition = "2021"

[lib]
name = "clearing_service"
crate-type = ["cdylib"]

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
